<resources>
    <string name="app_name">Havvka</string>
    <string name="email">Електронная почта</string>
    <string name="password">Пароль</string>
    <string name="login">Войти</string>
    <string name="noAccount">Нет аккаунта?</string>
    <string name="createAccount">Нет аккаунта? Создай новый</string>
    <string name="loginGuest">Войти как гость</string>
    <string name="forgotPassword">Забыли пароль?</string>
    <string name="register">Зарегестрироваться</string>
    <string name="repeatPassword">Повторите пароль</string>
    <string name="loginAccount">Уже есть аккаунт? Войдите</string>
    <string name="passwordError">Пароли не совпадают</string>
    <string name="emailError">Почта не на домене nure.ua</string>
    <string name="smallPassword">Пароль меньше 5 символов</string>
    <string name="title_home">Главная</string>
    <string name="title_favourites">Любимое</string>
    <string name="title_cart">Корзина</string>
    <string name="title_orders">Заказ</string>
    <string name="title_settings">Параметры</string>
    <string name="infoAcivity_sample">Sample name</string>
    <string name="addToCart">Добавить в корзину</string>
    <string name="addToFavourites">Добавить в сэт</string>
    <string name="cancel">Отменить</string>
    <string name="add">Добавить</string>
    <string name="chooseQuantity">Выберите количество</string>
    <string name="chooseQuantity2">Измените количество</string>
    <string name="quantity">количество:</string>
    <string name="price">цена:</string>
    <string name="changeQuantity">Изменить</string>
    <string name="deleteItem">Удалить товар</string>
    <string name="addedToCart">Товар добавлен в корзину</string>
    <string name="removedFromCart">Товар удален из корзины</string>
    <string name="summ">Сумма корзины:</string>
    <string name="buy">Купить</string>
    <string name="clickToExit">Для выхода нажмите Выход еще раз</string>
    <string name="wrongLogData">Неправильний пароль или почта</string>
    <string name="exit">Выйти</string>
    <string name="next">Дальше</string>
    <string name="addNew">Добавить новый</string>
    <string name="addName">Введите название</string>
    <string name="chooseFavSet">Выберите сэт</string>
    <string name="notEmptyName">Название не может быть пустым</string>
    <string name="addedNewFavSet">Ничего себе! Вы создали новый сэт!</string>
    <string name="addedNewFavItem">Вижу, Вы, добавили продукт в сэт</string>
    <string name="description">Описание</string>
    <string name="anotherDescription">Еще одно описание</string>
    <string name="ingridients">Ингредиенты</string>
    <string name="itemInfo">Информация про продукт</string>
    <string name="summOfSet">Сумма сэта</string>
    <string name="itemsAddedToCart">Товары добавленные в корзину</string>
    <string name="propositions">Места где это есть</string>
    <string name="rating">Рейтинг</string>
    <string name="setRating">Оценить</string>
    <string name="send">Отправить</string>
    <string name="sendRating">Спасибо за вашу оценку!</string>
    <string name="howIsIt">Насколько это круто?</string>
    <string name="date">Время</string>
    <string name="status">Статус</string>
    <string name="summ_single">Сумма</string>
    <string name="order_info">Информация про заказ</string>
    <string name="order_id">Номер заказа</string>
    <string name="order_date">Дата заказа</string>
    <string name="order_time">Время заказа</string>
    <string name="order_status">Статус</string>
    <string name="order_price">Сумма</string>
    <string name="order_submit">Оформление заказа</string>
    <string name="items">Видов товара: </string>
    <string name="date_order">Дата заказа:</string>
    <string name="time_order">Время заказа:</string>
    <string name="choose_canteen">Выберите столовую</string>
    <string name="pay_type">Способ оплаты</string>
    <string name="cash">Наличными</string>
    <string name="cashless">Безналичными</string>
    <string name="submit">Оформить</string>
    <string name="change">Поменять</string>
    <string name="sendSubmit">Ваш заказ отправлен на обработку</string>
    <string name="create_account">Ваш запрос отправлен. На Вашу почту прийдет письмо.</string>
    <string name="errorCreate">Случилась какая-то ошибка. Проверьте введенные данные</string>
    <string name="sort_first">Первое</string>
    <string name="sort_second">Второе</string>
    <string name="sort_desert">Десерт</string>
    <string name="sort_rating">Рейтинг</string>
    <string name="sort_drinks">Напитки</string>
    <string name="choose_sort">Виберите сортировку</string>
    <string name="add_error">Случилась какая-то ошибка. Мы не смогли это добавить</string>
    <string name="delete_question">Удалить?</string>
    <string name="delete">Удалить</string>
    <string name="delete_error">Случилась какая-то ошибка. Мы не смогли это удалить</string>
    <string name="invalid_time">Время работы столовой с 9:00 до 18:00</string>
    <string name="error">Случилась какая-то ошибка</string>
</resources>
