<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_basket_black_24dp"
        android:title="@string/title_cart" />
    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_collections_bookmark_black_24dp"
        android:title="@string/title_favourites" />
    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_local_offer_black_24dp"
        android:title="@string/title_orders" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />
</menu>
