<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:scrollbars="none"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".LoginActivity">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_centerInParent="true"
            >

            <ImageView android:src="@drawable/havvka_logo"
                android:id="@+id/logo_loginActivity"
                android:layout_marginTop="50dp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />

            <!-- Email Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp">
                <EditText android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email"
                    android:text="hola@nure.ua"/>
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="2dp">
                <EditText android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    android:text="12345"/>
            </android.support.design.widget.TextInputLayout>
            <TextView android:id="@+id/link_forgotPassword"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/forgotPassword"
                android:gravity="right"
                android:textSize="12sp"
                android:textColor="@color/colorAccent"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="28dp"
                android:padding="12dp"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/login"/>

            <TextView android:id="@+id/link_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/createAccount"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"/>

            <TextView android:id="@+id/link_guest"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/loginGuest"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="@color/colorAccent"/>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>