<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".InformationActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/top_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:columnCount="2"
            android:padding="5dp"
            android:rowCount="1">

            <ImageView
                android:id="@+id/back_arrow_order"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_arrow_back_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:text="@string/order_submit"
                android:textAlignment="center"
                android:textSize="18sp" />
        </GridLayout>

        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/top_container"
            android:layout_above="@+id/button"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="0dp"
            android:paddingStart="5dp"
            android:paddingEnd="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/items"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/num_of_items"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textSize="17sp" />
                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:text="@string/summ"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/sum_of_items"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"
                        android:textColor="@color/colorGreen"
                        android:textSize="17sp" />
                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/date_order"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/order_date_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="22.22.22"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/changeDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAccent"
                        android:text="@string/change"
                        android:textSize="13sp" />
                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="5dp"
                        android:text="@string/time_order"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/order_time_set"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="22.22.22"
                        android:textColor="@color/colorAccent"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/changeTime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:textAlignment="textEnd"
                        android:textColor="@color/colorAccent"
                        android:text="@string/change"
                        android:textSize="13sp" />
                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/choose_canteen"
                        android:textAlignment="center"
                        android:textSize="17sp" />

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:spinnerMode="dialog" />
                </LinearLayout>

                <View style="@style/Divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/pay_type"
                        android:textAlignment="center"
                        android:textSize="17sp" />

                    <RadioGroup
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp">

                        <RadioButton
                            android:id="@+id/cash"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/cash" />

                        <RadioButton
                            android:id="@+id/cashless"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/cashless" />
                    </RadioGroup>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/ic_wait"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_toStartOf="@+id/submit_btn"
                android:layout_centerInParent="true"
                android:visibility="invisible"
                android:src="@drawable/ic_filter_tilt_shift_black_24dp" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/submit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/submit" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>