<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cart_item_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/ripple">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_cartItem"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentStart="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/image_cartItem"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_cartItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:text="@string/infoAcivity_sample"
                android:textAlignment="center"
                android:textSize="20sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/quantity"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/quantity_cartItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/infoAcivity_sample"
                    android:textAlignment="textStart" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="5dp"
                    android:text="@string/price"
                    android:textAlignment="textEnd" />

                <TextView
                    android:id="@+id/price_cartItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/infoAcivity_sample"
                    android:textAlignment="textStart"
                    android:textColor="@color/colorGreen" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/setting_cartItem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_more_vert_black_24dp" />
    </RelativeLayout>


</LinearLayout>