<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="@drawable/ripple"
    android:orientation="horizontal"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="15dp"
                android:text="#"
                android:textAlignment="textEnd"
                android:textSize="23sp" />

            <TextView
                android:id="@+id/id_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="hhhhhhhhhh"
                android:textAlignment="textStart"
                android:textSize="23sp" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/list_background_round"
            android:columnCount="3"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:rowCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:paddingStart="15dp"
                android:layout_marginBottom="4dp"
                android:paddingEnd="15dp"
                android:text="@string/date"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:paddingStart="15dp"
                android:layout_marginBottom="4dp"
                android:paddingEnd="15dp"
                android:text="@string/status"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginBottom="4dp"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="@string/summ_single"
                android:textAlignment="center"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/date_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                android:text="hhhhhhhhh"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/status_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginStart="0dp"
                android:paddingEnd="15dp"
                android:paddingStart="0dp"
                android:text="hhhhhhhhhh"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/price_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_marginEnd="5dp"
                android:text="#"
                android:textAlignment="center"
                android:textSize="18sp" />

        </GridLayout>
    </LinearLayout>
</LinearLayout>